devel
-----

* Fix BTS-2178: If the URL in an HTTP request is bad, the server will
  now not simply close the connection but give a proper response.

* Fix unique _key generation in two cases: AQL INSERT operations in a loop
  without user specified _key in collections with exactly one shard or with
  multiple shard, non-standard sharding and `forceOneShardAttributeValue`.

* Fix BTS-1732 and BTS-2177: Possible crashes during shutdown, and maintainer
  mode (i.e. non-production) assertions during tests.

* Add a separate thread to the UserManager to handle the load of the user-cache asynchronously.
  This pre-loads the user-cache as fast as possible (as soon as the global version changes)
  Also, compared to the old version, this allows the read-only operation to work on the user-cache 
  for longer and not block each other while trying to load a new version. On a high load environment this also 
  means a more responsive UserManager and to prevent the thread responsible for the HTTP server to not getting blocked
  because of user-cache updates.

* During AQL setup, the Coordinator will no longer block threads while waiting
  for DBServers to finish the query instantiation.

* Add faiss and openmp versions in --version output of arangod.

* Fix BTS-2171: Reduce the amount of code executed on dedicated network threads,
  which might have reduced its throughput or delayed processing of other network
  responses.

* Updated ArangoDB Starter to v0.19.13.

* Delete the Coordinator-V8 wrappers for the agency.

* Deprecate rocksdb.transaction-lock-timeout option since we would
  internally change this to a different value.

* Rebuilt included rclone v1.65.2 with go1.23.12 and non-vulnerable
  dependencies.

* Upgraded OpenSSL to 3.5.2

* Fix error message to use proper terminology order instead of mode.

* FE-636: bump jest from 27.5.1 to 30.0.5 (latest version) (form-data package is no longer included)
